--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -2,9 +2,9 @@
   padding: 0;
   margin: 0;
   position: relative;
-  margin-bottom: 4px;
-  width: 1920px;
-  height: 1080px;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 
 #page-title {
